# supportBot

./: .env.example  README.md  container.py  main.py  pyproject.toml
bot/: callbacks.py  metrics.py
bot/bot_utils/: dialogs.py  filters.py  markup.py  models.py  routers.py
bot/dialogs/: __init__.py  admin_info.py  operator_tickets.py  projects_admin.py
bot/handlers/: __init__.py  admin.py  admin_support.py  default.py  errors.py  operator.py  phasalo_drollery.py  relay.py
bot/keyboards/: __init__.py  inline.py  reply.py
bot/middlewares/: logging_query.py  retry_request.py
bot/services/: relay.py
bot/states/: __init__.py  support.py
config/: const.py
db/: __init__.py  models.py
db/repositories/: __init__.py  operators.py  projects.py  ticket_messages.py  tickets.py
db/tables/: __init__.py  base.py  operators.py  projects.py  ticket_messages.py  tickets.py
phrases/: __init__.py  phrases_ru.yaml
utils/: format_list.py  format_string.py
