[project]
name = "phasalo-support-bot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "aiogram>=3.28.0",
    "aiogram-dialog==2.6.0",
    "aiohttp==3.9.5",
    "aiohttp-socks>=0.8.4",
    "colorlog==6.9.0",
    "dishka>=1.10.1",
    "pydantic==2.5.3",
    "python-dotenv==1.1.1",
    "pyyaml==6.0.2",
    "aiogram3-metrics>=0.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]
ignore = [
    "B008",  # function calls in default arguments
    "N999",  # DB folder uses uppercase
    "RUF001", # ambiguous Cyrillic chars in strings
    "RUF002", # ambiguous Cyrillic chars in docstrings
]

[tool.ruff.lint.isort]
known-first-party = ["bot", "config", "utils"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
